--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.7",
+    "@mui/styled-engine-sc": "^7.3.7",
     "@supabase/supabase-js": "^2.57.4",
+    "firebase": "^12.8.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "styled-components": "^6.3.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
