--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
     "typecheck": "tsc --noEmit -p tsconfig.app.json"
   },
   "dependencies": {
+    "@base-org/account": "^2.5.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.7",
     "@mui/styled-engine-sc": "^7.3.7",
+    "@reown/appkit": "^1.8.17",
+    "@reown/appkit-adapter-ethers": "^1.8.17",
+    "@reown/appkit-utils": "^1.8.17",
     "@supabase/supabase-js": "^2.57.4",
+    "ethers": "^6.16.0",
     "firebase": "^12.8.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
@@ -36,6 +41,7 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "vite": "^5.4.2",
+    "vite-plugin-node-polyfills": "^0.25.0"
   }
 }
