--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@base-org/account": "^2.5.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.7",
     "@mui/material": "^7.3.7",
     "@mui/styled-engine-sc": "^7.3.7",
     "@reown/appkit": "^1.8.17",
