--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ethers": "^6.16.0",
     "firebase": "^12.8.0",
     "lucide-react": "^0.344.0",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "styled-components": "^6.3.8"
